fix: send phaser container to background using z-index to overlay React UI

--- a/src/index.scss
+++ b/src/index.scss
@@ -15,6 +15,13 @@ body {
 }
 
 #phaser-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+
   canvas {
     display: block;
   }
